--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               Мы готовимся к экзаменам и учим билеты. 
               Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. 
               Зубрежка быстро выветривается и не приносит пользы.</p>
-            <p class="two-columns__paragraph two-columns__paragraph_place_center">
+            <p class="two-columns__paragraph">
               <span class="two-columns__span-accent">Вывод:</span>
               учиться тоже нужно уметь, но почему-то этому мало где учат. Что c этим делать?
             </p>
@@ -54,7 +54,7 @@
           <div class="table__cell">
             <h4 class="table__heading">2.1 миллиарда</h4>
             <p class="table__text">Число нуждающихся в повышении квалификации</p>
-            <p class="table__text table__text_place_down">Всемирный Банк, 2017</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </div>
 
           <div class="table__cell">
@@ -70,7 +70,7 @@
           <div class="table__cell">
             <h4 class="table__heading">420 миллионов</h4>
             <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-            <p class="table__text table__text_place_down">Всемирный Банк, 2017</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </div>
           
           <div class="table__cell">
@@ -92,9 +92,8 @@
 
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
-        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
         <a href="#" class="feynman__link">Подробнее &#8594;</a>
-        <img alt="фейнман" src="images/feynman.png" class="feynman__image">
       </section>
       
       <section class="kaufman">
@@ -160,22 +159,34 @@
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
           <div class="logo logo_place_footer"></div>
-          <div class="footer__author">&copy; Дмитрий Волков</div>
+          <p class="footer__author">&copy; Дмитрий Волков</p>
         </div>
-        <div class="footer__column footer__column_content_info">
+        <nav class="footer__column footer__column_content_info">
           <h5 class="footer__column-heading">О Практикуме</h5>
           <ul class="footer__column-links">
             <li><a href="#" class="footer__column-link">Главная</a></li>
             <li><a href="#" class="footer__column-link">Концепция</a></li>
             <li><a href="#" class="footer__column-link">Наставники</a></li>
           </ul>
-        </div>
+        </nav>
         <div class="footer__column footer__column_content_social">
           <h5 class="footer__column-heading">Соцсети</h5>
           <ul class="footer__column-links">
-            <li><a href="#" class="footer__column-link"><img alt="ютуб" src="youtube-icon.svg" class="footer__social-icon">YouTube</a></li>
-            <li><a href="#" class="footer__column-link"><img alr="вконтакте" src="vk_color_white.svg" class="footer__social-icon">Вконтакте</a></li>
-            <li><a href="#" class="footer__column-link"><img alt="тикток" src="tiktok-icon.svg" class="footer__social-icon">TikTok</a></li>
+            <li>
+              <a href="#" class="footer__column-link">
+                <img alt="ютуб" src="youtube-icon.svg" class="footer__social-icon">YouTube
+              </a>
+            </li>
+            <li>
+              <a href="#" class="footer__column-link">
+                <img alt="вконтакте" src="vk_color_white.svg" class="footer__social-icon">Вконтакте
+              </a>
+            </li>
+            <li>
+              <a href="#" class="footer__column-link">
+                <img alt="тикток" src="tiktok-icon.svg" class="footer__social-icon">TikTok
+              </a>
+            </li>
           </ul>
         </div>
       </div>
