--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,16 +8,18 @@
   <link rel="stylesheet" href="styles/style.css" />
   <title>Научиться учиться</title>
 </head>
+
 <body>
   <div class="page">
     <header class="header">
       <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
-      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
+        жизни?
         <a href="#" class="header__link">Узнать &#8594;</a>
       </p>
       <img src="images/header-image.png" alt="мальчик" class="header__main-illustration">
-      <div class="header__square-pic">    
+      <div class="header__square-pic">
       </div>
     </header>
 
@@ -26,16 +29,18 @@
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">
-              Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. 
-              Мы готовимся к экзаменам и учим билеты. 
-              Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. 
+              Ни в школе, ни в институте нас не учат тому, как правильно изучать материал.
+              Мы готовимся к экзаменам и учим билеты.
+              Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам
+              реального знания.
               Зубрежка быстро выветривается и не приносит пользы.</p>
             <p class="two-columns__paragraph">
               <span class="two-columns__span-accent">Вывод:</span>
               учиться тоже нужно уметь, но почему-то этому мало где учат. Что c этим делать?
             </p>
             <p class="two-columns__paragraph">
-              Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим.
+              Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и
+              захватывающим.
               Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </div>
@@ -72,11 +77,11 @@
             <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
             <p class="table__text">Всемирный Банк, 2017</p>
           </div>
-          
+
           <div class="table__cell">
             <h4 class="table__heading">17–20 лет</h4>
             <p class="table__text">Пик обучаемости</p>
-          </div>  
+          </div>
 
           <div class="table__cell">
             <h4 class="table__heading">1885 год</h4>
@@ -95,7 +100,7 @@
         <p class="feynman__subtitle">Выучить и не забыть.</p>
         <a href="#" class="feynman__link">Подробнее &#8594;</a>
       </section>
-      
+
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
@@ -143,7 +148,8 @@
 
           <div class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">9</h4>
-            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.
+            </p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
@@ -193,4 +199,5 @@
     </footer>
   </div>
 </body>
+
 </html>
